# python_template

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  cookiecutter.json  makefile  noxfile.py  pyproject.toml
{{cookiecutter.project_dir}}/: __init__.py  logger.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  logconfig.yaml  makefile  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_python_template.py  test_{{cookiecutter.project_dir}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_dir}}/: main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_dir}}/greeter/: greeter.py
{{cookiecutter.project_name}}/{{cookiecutter.project_dir}}/models/: sample.py  user.py
{{cookiecutter.project_name}}/{{cookiecutter.project_dir}}/sample/: sample_class.py
