[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Szczerbatybober <szczerbatybober@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
loguru = "^0.6.0"
pydantic = "^1.10.4"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
nox = "^2022.1.7"
coverage = "^6.4.1"
pre-commit = "^2.19.0"
pretty-errors = "^1.2.25"
hypothesis = "^6.66.0"
pylint = "^2.14.4"
responses = "^0.21.0"
ruff = "^0.0.240"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120


[tool.pyright]
include = ["{{cookiecutter.project_name}}", "tests"]
exclude = [
    "**/__pycache__",
    "alembic",
    ".venv"
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--html=dist/report.html",
    "--cov={{cookiecutter.project_name}}",
    "--cov-report=term-missing",
    "--cov-report=html:dist/coverage",
    "-s"
    ]
testpaths = [
    "tests",
]
markers = [
    "smoke",
    "slow : tests which are slow and can be excluded if speed is needed",
]

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "logging-fstring-interpolation" #TODO review this rule
]